[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | _build
    | build
    | dist
    | IFC4.3.x-development
    | src/client/blender_client
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''


[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
  "src/client/api"
]