[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[metadata]
name = ifc_schema
author = Kristoffer H. Andersen
author_email = kristoffer_andersen@outlook.com
description = A helper util for reading IFC EXPRESS files and for experimenting with IFC as a database
url = https://github.com/krande/ifcdb
project_urls = 
	Code=https://github.com/krande/ifcdb
	Issues=https://github.com/krande/ifcdb/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPLv3
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.10
	Topic :: Scientific/Engineering
	Topic :: Utilities
keywords = 
	Python
	Data Science
	Interoperability
	IFC
	file formats
	engineering


[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.10
include_package_data = True

[options.packages.find]
where = src

[flake8]
max-line-length = 120
ignore = E24, E121, E123, E126, E203, E226, E704, E741, W503, W504
exclude = IFC4.3.x-development
